--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^12.8.0",
+    "framer-motion": "^12.29.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
